# qc-drug-design

./: .gitignore  README.md  pyproject.toml  vqe.py
c_c_bond/: energy_calculate.py  opt_4H3O.py  opt_5.py  opt_6.py  qc.py
c_c_bond/HF_Gaussian/: 4_H3O+.gjf  5.gjf  6.gjf
covalent_bond/: README.md
covalent_bond/QMMM/: 6oim_sotor_prepare.ipynb  6oim_sotorasib_qmmm_verify.py  energy_1030.csv  qm_analysis.ipynb
covalent_bond/QMMM/data/: 6oim_CYX.mc  6oim_CYX_amber_success.rst7  6oim_GDP.sdf  6oim_sotor_amber.in  CYX12_sotorasib.mol2  CYX12_sotorasib.sdf  gdp_amber.frcmod  gdp_amber.mol2  sotor_amber.ac  sotor_amber.frcmod  sotor_amber.prepin  sotorasib.sdf
covalent_bond/cont_1221/: 6oim_sotorasib_qmmm_cont.py  energy_1221.csv
covalent_bond/cont_1228/: 6oim_sotorasib_qmmm_cont.py
docs/: _config.yml  cc.md  examples.md  hf.md  hf_with_cosmo.md  index.md  kras.md
docs/_includes/: head-custom-google-analytics.html
tcm_compound_test/: Calycosin_5280448.sdf  Curcumin_969516.sdf  Daidzein_5281708.sdf  Epicatechin_72276.sdf  Epigallocatechin Gallate_65064.sdf  Gallic Acid_370.sdf  Liquiritigenin_114829.sdf  Matairesinol_119205.sdf  Pinoresinol_73399.sdf  Quercetin_5280343.sdf  alpha-Curcumene_92139.sdf  ar-Turmerone_160512.sdf  ginsenoside C-K_9852086.sdf
